# EmbedR

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
doc/: Doxyfile.in
include/: EmbedR.hpp
src/: EmbedR.cpp
tests/: EmbedRRepl.cpp  EmbedRTests.cpp
